--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8">
+        <title>Cat Restaurant</title>
+    </head>
+    <body>
+        <div>
+            
+        </div>
 
 
-
-
-<p>hello</p>
-
-</html>
+    </body>
+    </html>
