Added majority of practice

--- a/index.html
+++ b/index.html
@@ -2,13 +2,50 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Cat Restaurant</title>
+        <link href="index.css"  rel="stylesheet" type="text/css">
+        <title>Cataurant</title>
     </head>
-    <body>
-        <div>
-            
-        </div>
 
+
+    <body>
+    <div class="title">
+        <a href="#"> <img class="logo-border logo-container" src="images/logo.png" > </a>
+    </div>
+
+    <div class="title-space">
+          <p>Cataurant</p>
+    </div>
+
+
+<div class="top-container fade-in">
+    <div id="top-left">
+        <img class="food-picture move-in " href="#" alt="Food" src="images/bread.jpeg">
+        <p class="move-left" style="margin: 2rem;">Cat bread, made daily by Mr.meowzers <br> Mr.Meowzers finds the freshest
+        dough from the distant land of Catopia <br> <br> $50 for a roll of cat bread</p>
+    </div>
+
+    <div id="top-right">
+        <img class="food-picture move-in" href="#" alt="Food" src="images/eggs.jpg">
+       <div class="move-left">
+        <p style="margin: 2rem;"> A fuckin cat egg B O I <br><br> Cost: $200</p>
+    </div>
+    </div>
+</div>
+
+
+
+
+<div class="bottom-container fade-in">
+    <div id="bottom-left">
+        <img class="food-picture move-in" href="#" alt="Food" src="images/coffee.jpg">
+        <p class="move-left" style="margin: 2rem;" >Coffee cat <br> <br>Cost: $5 for a <b>SIP</b> of coffee</p>
+    </div>
+
+    <div id="bottom-right">
+        <img class="food-picture move-in" href="#" alt="Food" src="images/donut.jpg">
+        <p class="move-left" style="margin: 2rem;"> Cat donut, made from actual cats <br><br> Cost: Your soul</p>
+    </div>
+</div>
 
     </body>
     </html>
